Corrected package name and added backend_url

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fourdgaming.prostack">
+    package="com.fourdgamimg.prostack">
     
     <!-- Camera permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
