--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   
   # In-App Purchase
   in_app_purchase: ^3.1.13
+  in_app_purchase_android: ^0.3.0+13
   
   # Permissions
   permission_handler: ^12.0.1
