--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  device_info_plus: ^10.1.0
   
   # UI & Icons
   cupertino_icons: ^1.0.6
