--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.1.0
-  device_info_plus: ^10.1.0
-  
+  flutter_dotenv: ^6.0.0
+  device_info_plus: ^12.3.0
+  screenshot: ^3.0.0
   # UI & Icons
   cupertino_icons: ^1.0.6
   
