--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,8 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+dart_defines.json
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
