--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: business_card_maker
 description: A business card scanner and maker app with AI resume builder
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.1+3
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -53,7 +53,7 @@ dependencies:
   # Utilities
   intl: ^0.20.2
   uuid: ^4.2.1
-  htpp: ^1.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
